AdvSearch/css: Fix minor alignment issue with parent filters

--- a/data/style.css
+++ b/data/style.css
@@ -1132,10 +1132,10 @@ p.filselect i { font-style: normal }
 /****** Advanced Search *******/
 
 .advsearch { max-width: 800px; margin: 0 auto; display: flex; flex-direction: column; align-items: center; justify-content: center }
-.advsearch .advrow > tr > td { padding: 0 2px }
+.advsearch .advrow > tr > td { padding: 0 2px 0 0 }
 .advsearch .advrow > tr > td:first-child { text-align: right; white-space: nowrap; }
 .advsearch .advrow > tr > td:first-child > div { width: auto }
-.advsearch .advnest > tr > td { padding: 0 2px }
+.advsearch .advnest > tr > td { padding: 0 2px 0 0 }
 .advsearch .advnest > tr > td:first-child { text-align: right; white-space: nowrap; }
 .advsearch .advnest > tr > td:first-child > div { width: auto }
 .advsearch .advnest > tr > td:first-child > b { display: block; margin: 6px 3px 0 0 }
